--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -32,9 +32,144 @@ LastExecutedLaunchName=MT330D07
 LastExecutedPIEPreviewDevice=
 
 [EditorStartup]
-LastLevel=/Game/VirtualRealityBP/Maps/StartupMap
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorManager]
 CleanShutdown=False
+
+[MRU]
+MRUItem0=/Game/TylerMap1
+MRUItem1=/Game/NewLevel
+
+[LandscapeEdit]
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[DetailCustomWidgetExpansion]
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+
+[ContentBrowser]
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
+
+[DetailCategories]
+Brush.TransformCommon=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+Brush.BrushSettings=True
+Brush.Actor=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Lighting=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Actor=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Lightmass=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+MotionControllerPawn_C.TransformCommon=True
+MotionControllerPawn_C.Pawn=True
+MotionControllerPawn_C.Camera=True
+MotionControllerPawn_C.Rendering=True
+MotionControllerPawn_C.Input=True
+MotionControllerPawn_C.Actor=True
+MeshMergingSettingsObject.MeshSettings=True
+MeshMergingSettingsObject.MaterialSettings=True
+MeshMergingSettingsObject.LandscapeCulling=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Target Layers=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Input=True
+Landscape.Actor=True
+MotionControllerPawn_C.Chaperone=True
+MotionControllerPawn_C.Tick=True
+MotionControllerPawn_C.Default=True
+MotionControllerPawn_C.Replication=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Actor=True
+
+[DetailPropertyExpansion]
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
+RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn;
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+
+[AssetEditorToolkitTabLocation]
+/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=1
 
 
