--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -16,14 +16,6 @@ GraphicsAdapter=0
 AudioInputDevice="{0.0.1.00000000}.{173e4898-4a48-4167-ae6b-903531cbcea5}"
 AudioOutputDevice="{0.0.0.00000000}.{bde8dccd-c56c-4116-9014-8f430927dcc8}"
 
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
-
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
 UnicastEndpoint=0.0.0.0:0
@@ -32,5 +24,16 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
