--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -15,6 +15,14 @@ JavaPath=(Path="")
 GraphicsAdapter=0
 AudioInputDevice="{0.0.1.00000000}.{173e4898-4a48-4167-ae6b-903531cbcea5}"
 AudioOutputDevice="{0.0.0.00000000}.{bde8dccd-c56c-4116-9014-8f430927dcc8}"
+bChromaAbCorrectionEnabled=True
+PixelDensity=1.000000
+PixelDensityMin=0.500000
+PixelDensityMax=1.000000
+bPixelDensityAdaptive=False
+bHQBuffer=False
+bHQDistortion=False
+bUpdateOnRT=True
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
@@ -27,13 +35,5 @@ TunnelMulticastEndpoint=
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
 
 
