Added Materials (Grass & Gravel) - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -30,13 +30,14 @@ MultipleInstanceLastWidth=0
 LastExecutedLaunchDevice=WindowsNoEditor@MT330D07
 LastExecutedLaunchName=MT330D07
 LastExecutedPIEPreviewDevice=
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [EditorStartup]
 LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/TylerMaterials/GrassMaterial.GrassMaterial
+CleanShutdown=False
+OpenAssetsAtExit=/Game/TylerMaterials/LandscapeMatte.LandscapeMatte
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -288,7 +289,7 @@ MaterialExpressionLandscapeLayerSample.MaterialExpression=True
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" "
+MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" "
 MaterialExpression=
 Object=
 
@@ -304,6 +305,8 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 /Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass=0
 /Game/TylerMaterials/TexturesCom_Grass0003_1_seamless_S.TexturesCom_Grass0003_1_seamless_S=1
 /Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel=1
+/Game/TylerMaterials/GrassMaterial.GrassMaterial=1
+/Game/TylerMaterials/M_TylerGrass11.M_TylerGrass11=1
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
