--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,7 +38,6 @@ LastLevel=/Game/TylerMap1
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/TylerMaterials/TylerGravel_Mat.TylerGravel_Mat
-OpenAssetsAtExit=/Game/TylerMaterials/LandscapeMatte.LandscapeMatte
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -308,6 +307,8 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 /Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel=1
 /Game/TylerMaterials/GrassMaterial.GrassMaterial=1
 /Game/TylerMaterials/M_TylerGrass11.M_TylerGrass11=1
+/Game/TylerMaterials/TylerGravel_Mat.TylerGravel_Mat=1
+/Game/TylerMaterials/TylerNormalMap.TylerNormalMap=1
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -909,6 +910,6 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 
