--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,6 +38,10 @@ LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TylerMaterials/GrassMaterial.GrassMaterial
+OpenAssetsAtExit=/Game/TylerMaterials/M_TylerGrass11.M_TylerGrass11
+OpenAssetsAtExit=/Game/TylerMaterials/BushTextureTyler_Mat.BushTextureTyler_Mat
+OpenAssetsAtExit=/Game/TylerMaterials/TylerGravel_Mat.TylerGravel_Mat
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -453,6 +457,30 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+FoliageType_InstancedStaticMesh.Mesh=True
+FoliageType_InstancedStaticMesh.Painting=True
+FoliageType_InstancedStaticMesh.Placement=True
+FoliageType_InstancedStaticMesh.InstanceSettings=True
+FoliageType_InstancedStaticMesh.Physics=True
+FoliageType_InstancedStaticMesh.Scalability=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+InstancedFoliageActor.TransformCommon=True
+InstancedFoliageActor.Rendering=True
+InstancedFoliageActor.Input=True
+InstancedFoliageActor.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -479,6 +507,12 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 /Game/TylerMaterials/M_TylerGrass11.M_TylerGrass11=1
 /Game/TylerMaterials/TylerGravel_Mat.TylerGravel_Mat=1
 /Game/TylerMaterials/TylerNormalMap.TylerNormalMap=1
+/Game/TylerMaterials/Bush_Mat_Tyler_Mat.Bush_Mat_Tyler_Mat=1
+/Game/TylerMaterials/Bush_Mat.Bush_Mat=1
+/Game/TylerMaterials/TylerBush2.TylerBush2=1
+/Game/TylerMaterials/TylerBush.TylerBush=1
+/Game/TylerMaterials/BushTextureTyler_Mat.BushTextureTyler_Mat=1
+/Game/TylerMaterials/BushTextureTyler.BushTextureTyler=1
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -503,7 +537,7 @@ UNR=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content
 BRUSH=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBX=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBXAnim=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
-GenericImport=../../../../../../Users/Public/Documents/Public Projects/MMC-Assets/Materials/Gravel/TylerGravel.png
+GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Materials/Grass/TylerGrass2.png
 GenericExport=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericOpen=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericSave=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
@@ -1061,6 +1095,8 @@ SynthBenchmark.TimeStamp=2017.12.29-15.30.47
 SynthBenchmark.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.12.29-15.30.37
 ExternalImagePicker.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.12.29-15.30.10
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1078,12 +1114,86 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
+Radius=100.000000
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bKeepOverlappingVertices=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[PluginBrowser]
+InstalledPlugins=UnrealJS
 
 
