Added tree model + textures to game. - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,10 +38,6 @@ LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TylerMaterials/GrassMaterial.GrassMaterial
-OpenAssetsAtExit=/Game/TylerMaterials/M_TylerGrass11.M_TylerGrass11
-OpenAssetsAtExit=/Game/TylerMaterials/BushTextureTyler_Mat.BushTextureTyler_Mat
-OpenAssetsAtExit=/Game/TylerMaterials/TylerGravel_Mat.TylerGravel_Mat
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -62,6 +58,7 @@ bSCSEditorShowFloor=False
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=1
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -492,6 +489,7 @@ Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/TylerMaterials/TylerTree_Plane.TylerTree_Plane;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
@@ -513,6 +511,11 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 /Game/TylerMaterials/TylerBush.TylerBush=1
 /Game/TylerMaterials/BushTextureTyler_Mat.BushTextureTyler_Mat=1
 /Game/TylerMaterials/BushTextureTyler.BushTextureTyler=1
+/Game/TylerMaterials/NewBush_Tyler.NewBush_Tyler=1
+/Game/TylerMaterials/TylerTree_Plane.TylerTree_Plane=1
+/Game/TylerMaterials/TylerBark_Mat.TylerBark_Mat=1
+/Game/TylerMaterials/TylerTree_Plane_004.TylerTree_Plane_004=1
+/Game/TylerMaterials/TylerTree_Plane_001.TylerTree_Plane_001=1
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -537,7 +540,7 @@ UNR=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content
 BRUSH=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBX=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBXAnim=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
-GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Materials/Grass/TylerGrass2.png
+GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Materials/Trees/TylerTree2.png
 GenericExport=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericOpen=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericSave=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
@@ -1114,14 +1117,14 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
-Radius=100.000000
+Radius=50.000000
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
