Saved Map from Unreal Game. -Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -37,7 +37,9 @@ NewWindowPosition=(X=640,Y=340)
 LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/TylerMaterials/Tyler_Tree3New.Tyler_Tree3New
+OpenAssetsAtExit=/Game/TylerMaterials/Tree_Mat.Tree_Mat
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -489,6 +491,11 @@ Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_001.Tyler_Tree3New_Plane_001;
+RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_004.Tyler_Tree3New_Plane_004;
+RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_003.Tyler_Tree3New_Plane_003;
+RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_002.Tyler_Tree3New_Plane_002;
+RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane.Tyler_Tree3New_Plane;
 RecentlyPlaced=/Game/TylerMaterials/TylerTree_Plane.TylerTree_Plane;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn;
@@ -1124,7 +1131,7 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -1198,5 +1205,8 @@ bConvertSceneUnit=False
 
 [PluginBrowser]
 InstalledPlugins=UnrealJS
+
+[SelectionDetails]
+PreserveScaleRatio=False
 
 
