--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,8 +38,7 @@ LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/TylerMaterials/Tyler_Tree3New.Tyler_Tree3New
-OpenAssetsAtExit=/Game/TylerMaterials/Tree_Mat.Tree_Mat
+OpenAssetsAtExit=/Game/TylerMaterials/TylerGravel_Mat.TylerGravel_Mat
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -480,6 +479,37 @@ InstancedFoliageActor.TransformCommon=True
 InstancedFoliageActor.Rendering=True
 InstancedFoliageActor.Input=True
 InstancedFoliageActor.Actor=True
+AssetViewerSettings.Settings=True
+AssetViewerSettings.Color Grading=True
+AssetViewerSettings.Lens=True
+AssetViewerSettings.Rendering Features=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpressionLandscapeLayerCoords=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpression=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -491,6 +521,9 @@ Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
+RecentlyPlaced=/Game/TylerMaterials/Tyler_Fireplace.Tyler_Fireplace;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_001.Tyler_Tree3New_Plane_001;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_004.Tyler_Tree3New_Plane_004;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_003.Tyler_Tree3New_Plane_003;
@@ -523,6 +556,7 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 /Game/TylerMaterials/TylerBark_Mat.TylerBark_Mat=1
 /Game/TylerMaterials/TylerTree_Plane_004.TylerTree_Plane_004=1
 /Game/TylerMaterials/TylerTree_Plane_001.TylerTree_Plane_001=1
+/Game/TylerMaterials/Tyler_Tree3New.Tyler_Tree3New=1
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -1131,7 +1165,7 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -1208,5 +1242,10 @@ InstalledPlugins=UnrealJS
 
 [SelectionDetails]
 PreserveScaleRatio=False
+
+[/Script/UnrealEd.ContentBrowserSettings]
+DisplayEngineFolder=True
+DisplayL10NFolder=False
+DisplayPluginFolders=False
 
 
