Added Bean Bag extra copy file. - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -37,8 +37,7 @@ NewWindowPosition=(X=640,Y=340)
 LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/TylerMaterials/TylerGravel_Mat.TylerGravel_Mat
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
