Added blue beanbag to game. -Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -520,6 +520,8 @@ Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
+RecentlyPlaced=/Game/TylerMaterials/Tyler_Fence.Tyler_Fence;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Fireplace.Tyler_Fireplace;
@@ -529,7 +531,6 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_003.Tyler_Tree3New_Plan
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_002.Tyler_Tree3New_Plane_002;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane.Tyler_Tree3New_Plane;
 RecentlyPlaced=/Game/TylerMaterials/TylerTree_Plane.TylerTree_Plane;
-RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -580,7 +581,7 @@ UNR=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content
 BRUSH=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBX=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBXAnim=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
-GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Materials/Trees/TylerTree2.png
+GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Models/Outdoors/Cornhole/Tyler_BeanbagblendBlue.obj
 GenericExport=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericOpen=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericSave=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
@@ -1164,7 +1165,7 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -1246,5 +1247,8 @@ PreserveScaleRatio=False
 DisplayEngineFolder=True
 DisplayL10NFolder=False
 DisplayPluginFolders=False
+
+[SuppressableDialogs]
+WritablePackagesNotCheckedOut=False
 
 
