Added new materials and created function for teleporting beanbags. - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,7 +104,7 @@ BrushRadius=500.000000
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
+ContentBrowserTab1.SelectedPaths=
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -717,6 +717,60 @@ BP_PickupBeanbag_C.Tags=True
 BP_PickupBeanbag_C.ComponentReplication=True
 BP_PickupBeanbag_C.Cooking=True
 BP_PickupBeanbag_C.Events=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+REINST_BP_PickupBeanbag_C_58.TransformCommon=True
+REINST_BP_PickupBeanbag_C_58.StaticMesh=True
+REINST_BP_PickupBeanbag_C_58.Materials=True
+REINST_BP_PickupBeanbag_C_58.Physics=True
+REINST_BP_PickupBeanbag_C_58.Collision=True
+REINST_BP_PickupBeanbag_C_58.Lighting=True
+REINST_BP_PickupBeanbag_C_58.Rendering=True
+REINST_BP_PickupBeanbag_C_58.Tags=True
+REINST_BP_PickupBeanbag_C_58.Cooking=True
+REINST_BP_PickupBeanbag_C_58.Input=True
+REINST_BP_PickupBeanbag_C_58.Actor=True
+REINST_BP_PickupBeanbag_C_62.TransformCommon=True
+REINST_BP_PickupBeanbag_C_62.StaticMesh=True
+REINST_BP_PickupBeanbag_C_62.Materials=True
+REINST_BP_PickupBeanbag_C_62.Physics=True
+REINST_BP_PickupBeanbag_C_62.Collision=True
+REINST_BP_PickupBeanbag_C_62.Lighting=True
+REINST_BP_PickupBeanbag_C_62.Rendering=True
+REINST_BP_PickupBeanbag_C_62.Tags=True
+REINST_BP_PickupBeanbag_C_62.Cooking=True
+REINST_BP_PickupBeanbag_C_62.Input=True
+REINST_BP_PickupBeanbag_C_62.Actor=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Rendering=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+BoxComponent.TransformCommon=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Rendering=True
+BoxComponent.Tags=True
+BoxComponent.Cooking=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -728,6 +782,7 @@ Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag;
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New.Tyler_Tree3New;
@@ -747,7 +802,6 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_004.Tyler_Tree3New_Plan
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_003.Tyler_Tree3New_Plane_003;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_002.Tyler_Tree3New_Plane_002;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane.Tyler_Tree3New_Plane;
-RecentlyPlaced=/Game/TylerMaterials/TylerTree_Plane.TylerTree_Plane;
 
 [AssetEditorToolkitTabLocation]
 /Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=1
@@ -775,6 +829,7 @@ RecentlyPlaced=/Game/TylerMaterials/TylerTree_Plane.TylerTree_Plane;
 /Game/TylerMaterials/Tyler_BeanbagblendBlue.Tyler_BeanbagblendBlue=0
 /Game/TylerMaterials/Tyler_Fence.Tyler_Fence=0
 /Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube=0
+/Game/TylerMaterials/Tyler_FabricBeanbag_Mat.Tyler_FabricBeanbag_Mat=1
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -1384,7 +1439,7 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -1460,7 +1515,7 @@ bConvertSceneUnit=False
 InstalledPlugins=UnrealJS
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [/Script/UnrealEd.ContentBrowserSettings]
 DisplayEngineFolder=True
