resized world.- Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -39,6 +39,7 @@ LastLevel=/Game/TylerMap1
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
+OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -104,7 +105,7 @@ BrushRadius=500.000000
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -771,6 +772,21 @@ BoxComponent.Collision=True
 BoxComponent.Rendering=True
 BoxComponent.Tags=True
 BoxComponent.Cooking=True
+TylerMap1_C.Tick=True
+TylerMap1_C.Replication=True
+TylerMap1_C.Input=True
+TylerMap1_C.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+BP_PickupBeanbag_C.Default=True
+Actor.Input=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -780,6 +796,7 @@ MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[
 MaterialExpression=
 Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
+StaticMeshActor=
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -830,6 +847,7 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane.Tyler_Tree3New_Plane;
 /Game/TylerMaterials/Tyler_Fence.Tyler_Fence=0
 /Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube=0
 /Game/TylerMaterials/Tyler_FabricBeanbag_Mat.Tyler_FabricBeanbag_Mat=1
+/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1=1
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -1439,7 +1457,7 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -1515,7 +1533,7 @@ bConvertSceneUnit=False
 InstalledPlugins=UnrealJS
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [/Script/UnrealEd.ContentBrowserSettings]
 DisplayEngineFolder=True
