created new sounds folder. Added a test sound (borrowed from Assets folder). Will make new sound next time. -Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,9 +103,11 @@ BrushRadius=500.000000
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+StaticMeshActor=StaticMeshActor.Collision.Collision,
+BP_PickupCube_C=BP_PickupCube_C.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Sounds
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -787,6 +789,41 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
 BP_PickupBeanbag_C.Default=True
 Actor.Input=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+REINST_BP_PickupBeanbag_C_70.Variable=True
+REINST_BP_PickupBeanbag_C_70.TransformCommon=True
+REINST_BP_PickupBeanbag_C_70.Sockets=True
+REINST_BP_PickupBeanbag_C_70.StaticMesh=True
+REINST_BP_PickupBeanbag_C_70.Materials=True
+REINST_BP_PickupBeanbag_C_70.Physics=True
+REINST_BP_PickupBeanbag_C_70.Collision=True
+REINST_BP_PickupBeanbag_C_70.Lighting=True
+REINST_BP_PickupBeanbag_C_70.Rendering=True
+REINST_BP_PickupBeanbag_C_70.Tags=True
+REINST_BP_PickupBeanbag_C_70.ComponentReplication=True
+REINST_BP_PickupBeanbag_C_70.Cooking=True
+REINST_BP_PickupBeanbag_C_70.Events=True
+BP_PickupBeanbag_C.Mobile=False
+StaticMeshActor.Mobile=True
+BP_PickupCube_C.Navigation=True
+BP_PickupCube_C.Mobile=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+AudioComponent.TransformCommon=True
+AudioComponent.Sound=True
+AudioComponent.Attenuation=True
+AudioComponent.Filter=True
+AudioComponent.Modulation=True
+AudioComponent.Concurrency=True
+AudioComponent.Tags=True
+AudioComponent.ComponentReplication=True
+AudioComponent.Activation=True
+AudioComponent.Variable=True
+AudioComponent.Cooking=True
+AudioComponent.Sockets=True
+AudioComponent.Events=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -797,6 +834,7 @@ MaterialExpression=
 Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 StaticMeshActor=
+BP_PickupCube_C=
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -848,6 +886,7 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane.Tyler_Tree3New_Plane;
 /Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube=0
 /Game/TylerMaterials/Tyler_FabricBeanbag_Mat.Tyler_FabricBeanbag_Mat=1
 /Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1=1
+/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag=1
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
@@ -872,7 +911,7 @@ UNR=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content
 BRUSH=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBX=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBXAnim=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
-GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Models/Outdoors/Cornhole/Tyler_Tableblend.obj
+GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Sounds/metalClang02.wav
 GenericExport=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericOpen=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericSave=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
@@ -1457,7 +1496,7 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -1555,5 +1594,7 @@ Bluebeanbag1_Blueprint_C.Lighting=True
 Bluebeanbag2_Blueprint_C.Lighting=True
 Bluebeanbag3_Blueprint_C.Lighting=True
 Redbeanbag1_Blueprint_C.Collision=False
+BP_PickupBeanbag_C.Lighting=False
+BP_PickupCube_C.StaticMesh=False
 
 
