Added test Sounds & fixed collision. _Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -40,6 +40,9 @@ LastLevel=/Game/TylerMap1
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
 OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
+OpenAssetsAtExit=/Game/TylerMaterials/Tyler_cornholeBoard.Tyler_cornholeBoard
+OpenAssetsAtExit=/Game/TylerMaterials/Tyler_Tableblend.Tyler_Tableblend
+OpenAssetsAtExit=/Game/Tyler_Blueprints/Tyler_cornholeBoard2_Blueprint.Tyler_cornholeBoard2_Blueprint
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -107,7 +110,7 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,
 BP_PickupCube_C=BP_PickupCube_C.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Sounds
+ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -824,6 +827,77 @@ AudioComponent.Variable=True
 AudioComponent.Cooking=True
 AudioComponent.Sockets=True
 AudioComponent.Events=True
+Tyler_cornholeBoard2_Blueprint_C.Tick=True
+Tyler_cornholeBoard2_Blueprint_C.Actor=True
+Tyler_cornholeBoard2_Blueprint_C.Rendering=True
+Tyler_cornholeBoard2_Blueprint_C.Replication=True
+Tyler_cornholeBoard2_Blueprint_C.Input=True
+Tyler_cornholeBoard2_Blueprint_C.TransformCommon=True
+Tyler_cornholeBoard2_Blueprint_C.StaticMesh=True
+Tyler_cornholeBoard2_Blueprint_C.Materials=True
+Tyler_cornholeBoard2_Blueprint_C.Physics=True
+Tyler_cornholeBoard2_Blueprint_C.Collision=True
+Tyler_cornholeBoard2_Blueprint_C.Lighting=True
+Tyler_cornholeBoard2_Blueprint_C.Tags=True
+Tyler_cornholeBoard2_Blueprint_C.Cooking=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.TransformCommon=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.StaticMesh=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.Materials=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.Physics=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.Collision=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.Lighting=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.Rendering=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.Tags=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.Cooking=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.Input=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_88.Actor=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.TransformCommon=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.StaticMesh=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.Materials=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.Physics=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.Collision=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.Lighting=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.Rendering=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.Tags=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.Cooking=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.Input=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_94.Actor=True
+ObjectProperty.DefaultValueCategory=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.TransformCommon=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.StaticMesh=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.Materials=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.Physics=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.Collision=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.Lighting=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.Rendering=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.Tags=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.Cooking=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.Input=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_100.Actor=True
+REINST_BP_PickupBeanbag_C_106.TransformCommon=True
+REINST_BP_PickupBeanbag_C_106.StaticMesh=True
+REINST_BP_PickupBeanbag_C_106.Materials=True
+REINST_BP_PickupBeanbag_C_106.Physics=True
+REINST_BP_PickupBeanbag_C_106.Collision=True
+REINST_BP_PickupBeanbag_C_106.Lighting=True
+REINST_BP_PickupBeanbag_C_106.Rendering=True
+REINST_BP_PickupBeanbag_C_106.Tags=True
+REINST_BP_PickupBeanbag_C_106.Cooking=True
+REINST_BP_PickupBeanbag_C_106.Input=True
+REINST_BP_PickupBeanbag_C_106.Actor=True
+REINST_BP_PickupBeanbag_C_120.TransformCommon=True
+REINST_BP_PickupBeanbag_C_120.StaticMesh=True
+REINST_BP_PickupBeanbag_C_120.Materials=True
+REINST_BP_PickupBeanbag_C_120.Physics=True
+REINST_BP_PickupBeanbag_C_120.Collision=True
+REINST_BP_PickupBeanbag_C_120.Lighting=True
+REINST_BP_PickupBeanbag_C_120.Rendering=True
+REINST_BP_PickupBeanbag_C_120.Tags=True
+REINST_BP_PickupBeanbag_C_120.Cooking=True
+REINST_BP_PickupBeanbag_C_120.Input=True
+REINST_BP_PickupBeanbag_C_120.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -831,10 +905,11 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" "
 MaterialExpression=
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 StaticMeshActor=
 BP_PickupCube_C=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -911,7 +986,7 @@ UNR=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content
 BRUSH=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBX=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBXAnim=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
-GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Sounds/metalClang02.wav
+GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Sounds/Bean_Bag_Land.mp3
 GenericExport=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericOpen=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericSave=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
