Added sounds & In game text. -Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -38,11 +38,9 @@ LastLevel=/Game/TylerMap1
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Tyler_Blueprints/Tyler_cornholeBoard2_Blueprint.Tyler_cornholeBoard2_Blueprint
 OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
 OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
-OpenAssetsAtExit=/Game/TylerMaterials/Tyler_cornholeBoard.Tyler_cornholeBoard
-OpenAssetsAtExit=/Game/TylerMaterials/Tyler_Tableblend.Tyler_Tableblend
-OpenAssetsAtExit=/Game/Tyler_Blueprints/Tyler_cornholeBoard2_Blueprint.Tyler_cornholeBoard2_Blueprint
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -63,7 +61,6 @@ bSCSEditorShowFloor=False
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=1
-bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -110,7 +107,7 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,
 BP_PickupCube_C=BP_PickupCube_C.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Tyler_Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Sounds
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -898,6 +895,47 @@ REINST_BP_PickupBeanbag_C_120.Tags=True
 REINST_BP_PickupBeanbag_C_120.Cooking=True
 REINST_BP_PickupBeanbag_C_120.Input=True
 REINST_BP_PickupBeanbag_C_120.Actor=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.TransformCommon=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.StaticMesh=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.Materials=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.Physics=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.Collision=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.Lighting=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.Rendering=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.Tags=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.Cooking=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.Input=True
+REINST_Tyler_cornholeBoard2_Blueprint_C_36.Actor=True
+Tyler_cornholeBoard2_Blueprint_C.Variable=True
+Tyler_cornholeBoard2_Blueprint_C.Sockets=True
+Tyler_cornholeBoard2_Blueprint_C.ComponentReplication=True
+Tyler_cornholeBoard2_Blueprint_C.Events=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+FloatingText.TransformCommon=True
+FloatingText.Rendering=True
+FloatingText.Input=True
+FloatingText.Actor=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.Cooking=True
+SceneComponent.TransformCommon=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Input=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -905,13 +943,15 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" "
 MaterialExpression=
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
+Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 StaticMeshActor=
 BP_PickupCube_C=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Script/VREditor.FloatingText;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag;
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube;
@@ -930,8 +970,6 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Fireplace.Tyler_Fireplace;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_001.Tyler_Tree3New_Plane_001;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_004.Tyler_Tree3New_Plane_004;
 RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_003.Tyler_Tree3New_Plane_003;
-RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_002.Tyler_Tree3New_Plane_002;
-RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane.Tyler_Tree3New_Plane;
 
 [AssetEditorToolkitTabLocation]
 /Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn=1
@@ -960,7 +998,7 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane.Tyler_Tree3New_Plane;
 /Game/TylerMaterials/Tyler_Fence.Tyler_Fence=0
 /Game/VirtualRealityBP/Blueprints/BP_PickupCube.BP_PickupCube=0
 /Game/TylerMaterials/Tyler_FabricBeanbag_Mat.Tyler_FabricBeanbag_Mat=1
-/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1=1
+/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1=0
 /Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag=1
 
 [RootWindow]
@@ -986,7 +1024,7 @@ UNR=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content
 BRUSH=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBX=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 FBXAnim=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
-GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Sounds/Bean_Bag_Land.mp3
+GenericImport=../../../../../../Users/Public/Public Projects/MMC-Assets/Sounds/Bean_Bag_Pickup_tyler.wav
 GenericExport=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericOpen=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
 GenericSave=../../../../../../Users/Public/Public Projects/DemoCornholeTyler/Content/
@@ -1671,5 +1709,6 @@ Bluebeanbag3_Blueprint_C.Lighting=True
 Redbeanbag1_Blueprint_C.Collision=False
 BP_PickupBeanbag_C.Lighting=False
 BP_PickupCube_C.StaticMesh=False
+FloatingText.Actor=True
 
 
