Created Blueprint Trigger. - Tyler

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -30,7 +30,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MT330D07
 LastExecutedLaunchName=MT330D07
 LastExecutedPIEPreviewDevice=
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 NewWindowPosition=(X=640,Y=340)
 
 [EditorStartup]
@@ -40,6 +40,7 @@ LastLevel=/Game/TylerMap1
 CleanShutdown=True
 OpenAssetsAtExit=/Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1
 OpenAssetsAtExit=/Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag
+OpenAssetsAtExit=/Game/Tyler_Blueprints/BeanbagTrigger.BeanbagTrigger
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -938,6 +939,14 @@ TextRenderActor.Input=True
 TylerMap1_C.Default=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+Tyler_cornholeBoard2_Blueprint_C.ComponentTick=True
+BeanbagTrigger_C.Tick=True
+BeanbagTrigger_C.Rendering=True
+BeanbagTrigger_C.Replication=True
+BeanbagTrigger_C.Input=True
+BeanbagTrigger_C.Actor=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Variable=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1002,11 +1011,12 @@ RecentlyPlaced=/Game/TylerMaterials/Tyler_Tree3New_Plane_003.Tyler_Tree3New_Plan
 /Game/TylerMaterials/Tyler_FabricBeanbag_Mat.Tyler_FabricBeanbag_Mat=1
 /Game/TylerMap1.TylerMap1:PersistentLevel.TylerMap1=0
 /Game/Tyler_Blueprints/BP_PickupBeanbag.BP_PickupBeanbag=1
+/Game/Tyler_Blueprints/Tyler_cornholeBoard2_Blueprint.Tyler_cornholeBoard2_Blueprint=0
 
 [RootWindow]
 ScreenPosition=X=610.000 Y=288.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1586,6 +1596,8 @@ ExternalImagePicker.TimeStamp=2017.12.29-15.30.37
 ExternalImagePicker.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2017.12.29-15.30.10
 StaticMeshEditor.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2017.12.29-15.30.04
+LauncherServices.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1611,7 +1623,7 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
@@ -1696,6 +1708,7 @@ DisplayPluginFolders=False
 
 [SuppressableDialogs]
 WritablePackagesNotCheckedOut=False
+ChangeVariableType_Warning=False
 
 [DetailCategoriesAdvanced]
 Blueprint.ClassOptions=True
@@ -1712,5 +1725,6 @@ Redbeanbag1_Blueprint_C.Collision=False
 BP_PickupBeanbag_C.Lighting=False
 BP_PickupCube_C.StaticMesh=False
 FloatingText.Actor=True
+IntProperty.Variable=False
 
 
